--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -1,6 +1,7 @@
 <script>
   MathJax = {
     tex: {
+      displayMath: [['$$', '$$']],
       inlineMath: [["$", "$"]],
       tags: "ams",
     },
