--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -4,4 +4,5 @@
 {{ if or .Params.math .Site.Params.math }}
 {{ partial "math.html" . }}
 {{ end }}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
 {{- /* Head custom content area end */ -}}
